# LETRADE_V1

./: .cursorrules  .dockerignore  .env.development  .env.example  .env.live_test  .env.prod.example  .env.simulation_test  .env.telegram  .flake8  .gitignore  .pre-commit-config.yaml  24H_CONTINUOUS_TESTING_GUIDE.md  BINANCE_API_SETUP.md  Dockerfile  HANDOFF_PROMPT.md  LICENSE  MANIFEST.in  MVP_CERTIFICATION.md  README.md  continuous_testing_system.py  daily-report.md  debug_ma_strategy.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_rest_api.py  setup.py  setup_binance_testnet.md  simple_performance_test.py  simple_test.md  test_api.py  test_binance_connector.py  test_binance_order_execution.py  test_core_engine_integration.py  test_core_engine_integration_optimized.py  test_database_connection.py  test_e2e_optimized.py  test_e2e_simplified.py  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: auto-release.yml  ci.yml  minimal-ci.yml  pr-validation.yml  release.yml  simple-ci.yml
alembic/: env.py
alembic/versions/: 003_add_performance_indexes.py  59a79da12cee_initial_schema_based_on_design_docs.py
config/: live_trading_test.yaml  settings.yaml
config/database/: alembic.ini
config/docker/: docker-compose.prod.yml  docker-compose.test.yml
config/nginx/: nginx.prod.conf
docs/: DEPLOYMENT_GUIDE.md  LIVE_TRADING_SAFETY_CHECKLIST.md  MVP_FINAL_REPORT.md  PROJECT_SETUP_WORKFLOW.md  README.md
docs/api/: MESSAGE_BUS_API.md  README.md  REST_API.md  api-telegram-botfather.md
docs/architecture/: design-implementation-plan.md  design-system-architecture-v2.md  design-test-strategy.md
docs/deployment/: guide-auto-release.md  guide-ci-optimization.md  guide-deployment-workflow.md
docs/design/: INTERFACE_SPECIFICATION.md  SYSTEM_ARCHITECTURE_V2.md
docs/design-docs/: 00_System_Overview_and_Architecture.md  01_Core_Services_and_Execution_Framework.md  02_Capital_and_Risk_Management.md  05_Data_and_State_Management.md  06_Deployment_and_Operations_(DevOps).md
docs/development/: development-handoff-prompt.md  development-temp-futures-diagram.md
docs/exchange-integration/: research-binance-api-integration.md
docs/full-system/: AL_ML 거래 실행 시퀀스 다이어그램.md  선물 거래 및 레버리지 관리 시퀀스 다이어그램.md  스테이킹 및 DeFi 수익 창출 시퀀스 다이어그램.md  전체 시스템 배포 다이어그램(Kubernetes 기반).md  전체 시스템 클래스 다이어그램(고급 기능 포함).md
docs/guides/: guide-project-setup.md  guide-troubleshooting.md
docs/interfaces/: feature-binance-style-web-interface.md  feature-botfather-style-ui-ux.md  guide-telegram-botfather-features.md
docs/monitoring/: guide-performance-optimization.md  report-performance-achievement.md  report-performance-optimization.md
docs/mvp/: MVP 통합 기능명세서.md  자동 암호화폐 거래 시스템 컴포넌트 다이어그램.md
docs/releases/: release-notes.md
docs/reports/: report-botfather-analysis.md  report-cross-validation.md  report-final-metrics.md  (+2 more)
migrations/: 001_initial_schema.sql
reports/: daily-report-2026-04-20.md  daily-report-2026-04-27.md  daily-report-2026-05-04.md  daily-report-2026-05-11.md  daily-report-2026-05-18.md  daily-report-2026-05-25.md  daily-report-2026-06-01.md  daily-report-2026-06-08.md  simulation_test_report_20250625_053403.txt
scripts/: convert-diagrams.sh  fix_flake8_errors.py  milestone-commit.sh  monitor_system.sh  new-feature.sh  production_deploy.sh  quick_release.sh  release_to_stable.sh  run_ma_backtest.py  setup_git_hooks.sh  simple_telegram_commands.py  start_local_web.py  test-and-commit.sh  test_actual_telegram_commands.py  test_botfather_style_bot.py  test_emergency_notifications.py  test_existing_telegram_bot.py  test_fixed_telegram_bot.py  test_full.sh  test_help_command.py  test_local.sh  test_minimal.sh  test_websocket_connection.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_capital_manager_refactored.py  test_exchange_connector_integration.py  test_exchange_connector_integration.py.disabled  test_performance_optimization.py
(+131 files in other folders)
